--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "eslint:recommended",
     "prettier"
   ],
-  "plugins": [],
+  "plugins": ["html"],
   "parserOptions": {
     "ecmaVersion": 2022,
     "sourceType": "module",
