--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitejs/plugin-react": "2.1.0",
     "eslint": "8.24.0",
     "eslint-config-prettier": "8.5.0",
-    "prettier": "2.7.1"
+    "eslint-plugin-html": "8.1.1",
+    "prettier": "2.7.1",
+    "vite": "3.1.4"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
