--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,21 @@
 {
   "extends": [
     "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
     "prettier"
   ],
-  "plugins": ["html"],
+  "rules": {
+    "react/prop-types": 0,
+    "react/react-in-jsx-scope": 0
+  },
+  "plugins": [
+    "react",
+    "import",
+    "jsx-a11y",
+    "html"
+  ],
   "parserOptions": {
     "ecmaVersion": 2022,
     "sourceType": "module",
@@ -15,5 +27,15 @@
     "browser": true,
     "node": true,
     "es6": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx"]
+      }
+    }
   }
 }
