--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
   ],
   "rules": {
     "react/prop-types": 0,
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "no-unused-vars": ["error", { "varsIgnorePattern": "_" }]
   },
   "plugins": [
     "react",
